# 3DPromptStudio

./: .gitignore  LICENSE  README.md  THREE_RENDERER_PLAN.md  index.html  package-lock.json  package.json  vite.config.js
backend/: .env.example  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/: annotations.py  components.py  export.py  generation.py  interactions.py  models.py  operations.py  prompts.py  workspace.py
backend/app/core/: config.py  mcp_client.py
backend/app/db/: models.py  session.py
backend/app/schemas/: annotations.py  components.py  export.py  generation.py  interactions.py  models.py  operations.py  prompts.py  workspace.py
backend/app/services/: annotation_service.py  blender_mcp_service.py  component_service.py  export_service.py  generated_asset_service.py  generation_event_service.py  generation_service.py  interaction_service.py  model_service.py  openai_blender_generation_service.py  operation_service.py  prompt_context_service.py  prompt_service.py  workspace_service.py
backend/app/storage/: model_storage.py
backend/app/workers/: __init__.py  openai_blender_worker.py
backend/tests/: fixtures.py  test_annotations.py  test_blender_worker_contract.py  test_components.py  test_export.py  test_generation_events.py  test_generation_jobs.py  test_health.py  test_interactions.py  test_models.py  test_operations.py  test_prompt_fallback.py  test_prompt_openai.py  test_prompts.py  test_workspace.py
backend/tests/fixtures/: ambiguous_targets_registry.json  cat_hat_registry.json  chair_registry.json  prompt_cases.json  (+3 more)
(+81 files in other folders)
