[project]
name = "3dpromptstudio-backend"
version = "0.1.0"
description = "Python FastAPI backend for 3DPromptStudio."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "openai>=1.0",
  "uvicorn[standard]>=0.27",
  "pydantic>=2.6"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "httpx>=0.27"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
